--- a/templates/metro/contact_view.htm
+++ b/templates/metro/contact_view.htm
@@ -69,24 +69,27 @@
 
 		
 		<!-- Block -->
-		<dt>性別</dt>
+		<dt>權限</dt>
 		<dd>			
 			<div class="viewtext">{gender_name}</div>	
-			<div class="input-control select inputtext no-display">
-			    <select id="gender" name="gender" style="width:25%">
-			    	<option>N/A</option>
-			        <option value="m" {selected_gender_m}>男</option>
-			        <option value="f" {selected_gender_f}>女</option>			        
-			    </select>
+		
+		
+			<div class="input-control checkbox inputtext ">
+			    <label>
+			        <input type="checkbox"  id="power[]"  name="power[]"  value="course_manage"   {course_manage_checked}/>
+			        <span class="check"></span>
+			        課程管理
+			    </label>
+			
+			    <label>
+			        <input type="checkbox"  id="power[]"  name="power[]"    value="user_manage"  {user_manage_checked}/>
+			        <span class="check"></span>
+			        使用者管理
+			    </label>
 			</div>
+		
 		</dd>
-		<!-- Block -->
-		<dt>備註</dt>
-		<dd>
-			<div class="viewtext" style="width: 85%;">{notes}</div>
-			<textarea class="inputtext no-display" data-transform="input-control" style="width: 85%;"
-				id="notes"  name="notes" >{notes}</textarea>
-		</dd>
+
 	</dl>
 	<div style="margin-top: 40px;margin-bottom: 40px" class="inputtext no-display">
 		<a class="default button"  onClick="contact_save()">Save</a>
