--- a/templates/metro/course.htm
+++ b/templates/metro/course.htm
@@ -360,7 +360,7 @@
 
 	<!-- 課程成員 -->
 
-	<div class="accordion-frame {div-member-no-display}" >
+	<div class="accordion-frame {div-member-no-display} hide" >
 		<a href="#" class="heading "> {$lang.Member}</a>
 		<div class="content clearfix">
 			
