--- a/templates/metro/course_list.htm
+++ b/templates/metro/course_list.htm
@@ -56,7 +56,7 @@
 		
 		<!--  -->
 		
-      <div class="tile-group no-margin no-padding1 clearfix" style="width: 100%;">
+      <div class="tile-group no-margin no-padding1 clearfix hide" style="width: 100%;">
                  	 <a href="#"><span class="tile-group-title fg-orange">功能<span class="icon-arrow-right-5"></span></span></a>
 					
 					<a id="FILTER_BEGIN" class="tile bg-darkBlue selected" data-click="transform"  href="javascript:show_project_list('BEGIN');">
@@ -93,7 +93,7 @@
 		 
 		 <!-- BEGIN CATALOG -->
                 <div class="tile-group no-margin no-padding1 clearfix" style="width: 100%;">
-                    <a href="cat_course_list.php?catalog_id={CATALOG.catalog_id}"><span class="tile-group-title fg-orange">{CATALOG.catalog_title}<span class="icon-arrow-right-5"></span></span></a>                    
+                    <a href="cat_course_list.php?catalog_id={CATALOG.catalog_id}&{function_type}"><span class="tile-group-title fg-orange">{CATALOG.catalog_title}<span class="icon-arrow-right-5"></span></span></a>                    
 					
 					<!-- BEGIN TILE_LIST -->
 					
