--- a/templates/metro/contact_view.htm
+++ b/templates/metro/contact_view.htm
@@ -49,7 +49,7 @@
 			<div class="viewtext">{user_email}</div>
 			<span class="input-control text  on-right inputtext no-display" 	style="width:60%">	
 				<input type="text"  class="inputtext " size="10"  id="user_email"  name="user_email" value="{user_email}"
-				class="" placeholder="電子郵件" /> 	
+				placeholder="電子郵件"  /> 	
 				<button class="btn-clear"></button>
 			</span>			
 			
