--- a/templates/metro/contact_list.htm
+++ b/templates/metro/contact_list.htm
@@ -18,9 +18,9 @@
 	<a href="javascript:history.go(-1)" ><i class="icon-arrow-left-3 fg-darker smaller"></i></a>
 	Contact<small class="on-right">list</small>
 	<div class="place-right">
-		<a href="javascript:contact_del()"><img src="images/bt_delete.png" width="48px" id="deleteCompany" 	name="deleteCompany"></a> 			
+		<a href="javascript:contact_del()" class="{bt_delete_contact_display}"><img src="images/bt_delete.png" width="48px" id="deleteCompany" 	name="deleteCompany"></a> 			
 		<a href="javascript:contact_edit()"><img src="images/edit.png" width="48px"></a> 			
-		<a href="javascript:contact_new()" class="on-right-more"><img 	src="images/bt_create.png" width="48px"></a>
+		<a href="javascript:contact_new()" class="on-right-more {bt_create_contact_display}"><img 	src="images/bt_create.png" width="48px"></a>
 	</div>
 </h1>
 <div class="clearfix"></div>
@@ -46,7 +46,7 @@
 	
 	<div class="place-left " style="width: 80%"  id="top_base" name="top_base">
 		<a name=”top”></a>
-			<div id="content" name="content" data-role="content" data-scroll="vertical">123
+			<div id="content" name="content" data-role="content" data-scroll="vertical">Loading.....
 				<div ></div>
 			</div>
 	</div>
