--- a/templates/metro/contact_view.htm
+++ b/templates/metro/contact_view.htm
@@ -69,14 +69,11 @@
 
 		
 		<!-- Block -->
-		<dt>權限</dt>
-		<dd>			
-			
-		
-		
+		<dt class="{display_power}">權限</dt>
+		<dd  class="{display_power}">		
 			<div class="input-control checkbox inputtext ">
 			    <label>
-			        <input type="checkbox"  id="power[]"  name="power[]"  value="course_manage"   {course_manage_checked}/>
+			        <input type="checkbox"  id="power[]"  name="power[]"  value="course_manage"   {course_manage_checked} />
 			        <span class="check"></span>
 			        課程管理
 			    </label>
@@ -86,10 +83,8 @@
 			        <span class="check"></span>
 			        使用者管理
 			    </label>
-			</div>
-		
+			</div>		
 		</dd>
-
 	</dl>
 	<div style="margin-top: 40px;margin-bottom: 40px" class="inputtext no-display">
 		<a class="default button"  onClick="contact_save()">Save</a>
