--- a/templates/metro/header.htm
+++ b/templates/metro/header.htm
@@ -50,7 +50,7 @@
 <body class="metro">
 <div class="hide">
   <div  id="loginForm" >		
-			<label >E-mail2</label>
+			<label >E-mail</label>
 			<div class="input-control text  " style="width:85%">
 				<input type="text" name="user_email" id="user_email" >
 				<button class="btn-clear"></button>
