--- a/templates/metro/header_menu.htm
+++ b/templates/metro/header_menu.htm
@@ -37,9 +37,9 @@
 	            	<img src="{LOGOUT.photo}"/>
 	            </button>
                 <ul class="dropdown-menu" data-role="dropdown">
-					<li><a href="contact_list.php">Properties</a></li>
+					<li><a href="contact_list.php">設定</a></li>
 					<li class="divider"></li>
-					<li><a href="logout.php">Log out</a></li>
+					<li><a href="logout.php">登出</a></li>
              	</ul>  
 			</li>
 			<!-- END LOGOUT -->   
