--- a/templates/metro/header.htm
+++ b/templates/metro/header.htm
@@ -50,20 +50,20 @@
 <body class="metro">
 <div class="hide">
   <div  id="loginForm" >		
-			<label >E-mail</label>
+			<label >登入帳號</label>
 			<div class="input-control text  " style="width:85%">
 				<input type="text" name="user_email" id="user_email" >
 				<button class="btn-clear"></button>
 			</div>
 			
-			<label>Password</label>
+			<label>密碼</label>
 			<div class="input-control password " style="width:85%">
 				<input type="password" name="password" id="password"  >
 				<button class="btn-reveal"></button>
 			</div>
 			
 			<div>
-				<button type="button" class="button primary" onClick="login_to();return false;">Login</button>		
+				<button type="button" class="button primary" onClick="login_to();return false;">登入</button>		
 			</div>
 			<p>&nbsp;</p>
 		</div>
