--- a/templates/metro/header_menu.htm
+++ b/templates/metro/header_menu.htm
@@ -1,6 +1,6 @@
    <div class="navigation-bar" >
     <div class="navigation-bar-content container" >
-        <a href="home.php" class="element"><span class="icon-grid-view"></span>Little2LMS <sup>0.33 Beta</sup></a>
+        <a href="home.php" class="element"><span class="icon-grid-view"></span>Little2LMS <sup>v3.01</sup></a>
         <span class="element-divider"></span>
 
         <a class="element1 pull-menu" href="#"></a>
