--- a/templates/metro/sco.htm
+++ b/templates/metro/sco.htm
@@ -64,7 +64,7 @@
 					<h3 style="cursor: pointer; ">
 						<span onClick="click_function(1)">概觀</span>&nbsp&nbsp
 						<span onClick="click_function(2)" class="no-display">詳細資料&nbsp&nbsp</span>
-						<span onClick="click_function(3)">評論</span>&nbsp&nbsp
+						<span onClick="click_function(3)">{$lang.Discuss}</span>&nbsp&nbsp
 						<!-- BEGIN ShowUserLog -->
 						<span onClick="click_function(4)">閱讀紀錄</span>
 						<!-- END ShowUserLog -->
@@ -106,7 +106,7 @@
 								</div>
 			
 								<div style="margin-top: 5px">
-									<button type="button"  class="button place-right"  onClick="create_comment()">POST</button>
+									<button type="button"  class="button place-right"  onClick="create_comment()">{$lang.Sumbit}</button>
 								</div>
 							</div>
 						</div>
