--- a/templates/metro/header_menu.htm
+++ b/templates/metro/header_menu.htm
@@ -23,6 +23,13 @@
                     <li><a href="contact_list.php" class="{li_display_contact}">用戶</a></li>
              	</ul>  
              </li> 
+
+ 			<li>
+                <a class="dropdown-toggle"  href="#">說明</a>
+                <ul class="dropdown-menu" data-role="dropdown">
+                    <li><a href="readme.pptx" target="_blank">操作手冊</a></li>
+             	</ul>  
+             </li> 
                 
         </ul>
 
